# foundrydb-sdk-python

./: .gitignore  README.md  RELEASING.md  pyproject.toml  test_live.py
.github/workflows/: publish.yml
foundrydb/: __init__.py  ai_actions.py  app_jobs.py  app_services.py  attachments.py  backups.py  client.py  compliance.py  data_pipelines.py  edge.py  embedding_pipelines.py  file_services.py  inference.py  inference_services.py  monitoring.py  organizations.py  queues.py  services.py  stacks.py  types.py  users.py  vector_search.py  webhooks.py
tests/: conftest.py  test_app_services.py  test_backups.py  test_client.py  test_edge.py  test_inference_services.py  test_monitoring.py  test_organizations.py  test_services.py  test_users.py
