[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foundrydb-sdk"
version = "0.10.0"
description = "Python SDK for the FoundryDB managed database platform"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Anorph" }]
keywords = ["foundrydb", "managed-database", "postgresql", "mysql", "mongodb", "valkey", "kafka", "opensearch", "mssql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hatchling",
]

[project.urls]
Homepage = "https://foundrydb.com"
Repository = "https://github.com/anorph/foundrydb-sdk-python"
"Bug Tracker" = "https://github.com/anorph/foundrydb-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["foundrydb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
